Fixed alignment.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
@@ -763,7 +763,8 @@ select.ColumnFilter {
 }
 
 .DataTable thead th.DashboardHeader a,
-.TableSmall thead th.OverviewHeader a {
+.TableSmall thead th.OverviewHeader a,
+.DataTable thead th.DashboardHeader span.Gray {
     height: 16px;
     line-height: 16px;
     padding-left: 5px;
