--- a/var/httpd/htdocs/skins/Agent/default/css/Core.WidgetMenu.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.WidgetMenu.css
@@ -597,10 +597,6 @@ ul.ContextFunctions li:last-child:hover > a {
     font-size: 11px;
 }
 
-span.Pagination {
-    padding: 8px 10px;
-}
-
 .RTL .Pagination {
     float: left;
 }
